tests/conformance/syntax/positive/top_shared_valid.ditt
module Syntax.TopShared where

u_ascii : Top = u_ascii
u_unicode : ⊤ = u_unicode
