tests/conformance/syntax/negative/bottom_invalid.ditt
module Syntax.BottomBad where

b : Bottom = b
